# jupyter

./: .all-contributorsrc  .dockerignore  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .yarnrc.yml  CHANGELOG.md  CONTRIBUTING.md  Containerfile  Containerfile.dev  Makefile  README.md  RELEASE.md  babel.config.js  conftest.py  eslint.config.mjs  install.json  jest.config.js  jest.fileMock.js  jest.setup.js  jest.svgMock.js  package.json  pyproject.toml  setup.py  tox.ini  tsconfig.json
.github/workflows/: container.yaml  dev.yaml  image.yaml  images.yaml  main.yaml  package.yaml  publish.yaml
.husky/: pre-commit
examples/: .gitignore  README.md  untitled.waldiez
examples/01 - Standup Comedians/: README.md  Standup Comedians 1.waldiez  Standup Comedians 2.waldiez  Standup Comedians 3.waldiez
examples/02 - On-boarding/: On-boarding Async.waldiez  On-boarding.waldiez  README.md
examples/03 - Reflection/: README.md  Reflection.waldiez
examples/04 - Tools/: README.md  Tool Use.waldiez
examples/05 - Coding/: Coding.waldiez  README.md
examples/06 - Planning/: Planning 1.waldiez  Planning 2.waldiez  README.md
examples/07 - Group chat with RAG/: RAG.waldiez  README.md
examples/08 - ReAct using Tavily/: README.md  ReAct.waldiez
examples/09 - AutoDefence/: AutoDefense Flow.waldiez  README.md
examples/10 - Travel Planning/: README.md  Travel Planning.waldiez
examples/11 - Swarm/: README.md  Swarm.waldiez
examples/12 - Reasoning/: Chain-of-Thought Reasoning with DFS.waldiez  README.md
examples/13 - Captain/: 1 - Simple.waldiez  2 - With agent lib.waldiez  3 - With agent lib and tool lib.waldiez
examples/14 - HR Work Remotely/: HR_remote.waldiez
examples/15 - Innovation Ideas/: innovator.waldiez
examples/Exported/models/: gpt-3.5-turbo.waldiezModel
examples/Exported/skills/: get_stock_prices.waldiezSkill  plot_stock_prices.waldiezSkill
examples/Exported/tools/: search_tool.waldiezTool
jupyter-config/notebook-config/: waldiez_jupyter.json
jupyter-config/server-config/: waldiez_jupyter.json
patch/entities/: decode.d.ts  encode.d.ts
requirements/: all.txt  dev.txt  main.txt  test.txt
schema/: plugin.json
scripts/: build.py  build_dev.sh  clean.py  dev.ps1  dev.sh  first_lines.py  format.py  header.py  image.py  lcovHtml.ts  lint.py  mergeLcov.ts  merge_lcov.py  post_install.ts  python.ts  requirements.py  run.py  start.sh  start_docker.sh  test.py  version.py  version.ts
scripts/dev/: clean.py  dev.ps1  dev.sh  image.py  init.py  requirements.py  run.py
src/: commands.ts  constants.ts  editor.ts  factory.ts  icon.ts  index.ts  logger.ts  messageProcessor.ts  plugin.ts  rest.ts  runner.ts  widget.tsx
src/__tests__/: commands.spec.ts  editor.spec.ts  factory.spec.ts  logger.spec.ts  plugin.spec.ts  rest.spec.ts  runner.spec.ts  utils.ts  widget.spec.ts
src/__tests__/editor/: executionManager.spec.ts  kernelManager.spec.ts  waldiezEditor.spec.ts
src/__tests__/runner/: common.spec.ts  standardRunner.spec.ts  stepRunner.spec.ts
src/editor/: executionManager.ts  index.ts  kernelManager.ts  types.ts  waldiezEditor.ts
src/runner/: baseRunner.ts  common.ts  index.ts  standardRunner.ts  stepRunner.ts
style/: base.css
ui-tests/: README.md  jupyter_server_test_config.py  package-lock.json  package.json  playwright.config.js
ui-tests/tests/: waldies_jupyter.spec.ts  waldiez_jupyter.spec.ts
waldiez_jupyter/: __init__.py
waldiez_jupyter/handlers/: __init__.py  checkpoints_handler.py  extra_static_files.py  files_handler.py  interrupt_handler.py  upload_handler.py
waldiez_jupyter/tests/: __init__.py  test_extra_static_files.py  test_files_handler.py  test_upload_handler.py
waldiez_jupyter/tests/data/: flow.waldiez  flow_old.waldiez
